# MGFisioBook

./: .env.example  .env.sample  .gitignore  .pre-commit-config.yaml  CHANGELOG_CICD.md  Dockerfile  Makefile  README.md  RESUMEN_FINAL.txt  docker-compose.yml  pyproject.toml  requirements.txt  setup.sh  start.sh
.github/workflows/: README.md  ci.yml
app/: main.py
app/core/: config.py  database.py  email.py  firebase.py  security.py  supabase_client.py
app/models/: device_token.py  patient.py  promote_user.py  therapist.py
app/routers/: admin.py  appointment.py  auth.py  availability.py  device_token.py  patient.py  therapist.py
app/schemas/: appointment.py  auth.py  availability.py  invoice.py  patient.py  therapist.py  treatment.py
app/services/: appointment_service.py  availability_service.py  email_notification_service.py  patient_service.py  push_notification_service.py  therapist_service.py  (+1 more)
migrations/: env.py
tests/: README.md  conftest.py  test_appointment_and_free_slots.py  test_appointment_router_edges.py  test_appointment_router_roles.py  test_appointments_comprehensive.py  test_availability_service.py  test_db.sqlite  test_device_token_router.py  test_invoice_router_more.py  test_invoices_comprehensive.py  test_more_routers_coverage.py  test_patient_router.py  test_patient_service.py  test_push_notification_service.py  test_routers_appointments_and_device_token.py  test_routers_appointments_and_invoices_extra.py  test_routers_more_coverage.py  test_services_coverage.py  test_smoke.py  test_treatment_therapist_invoice_appointment.py
(+5 files in other folders)
